feat: groups_permissions

--- a/TestAuth/appsettings.json
+++ b/TestAuth/appsettings.json
@@ -7,11 +7,11 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "db": "Host=localhost; Port=5432; Database=authTest; Username=postgres; Password=password"
+    "db": "Host=localhost; Port=5432; Database=updateAuthTest; Username=postgres; Password=password"
   },
   "JWT": {
-    "ValidAudience": "http://localhost:5214",
-    "ValidIssuer": "dotnet-user-jwts",
+    "ValidAudience": "audience",
+    "ValidIssuer": "issuer",
     "Secret": "Ebemqo2+keddAxbkyAX4CeIL300+A1WxWE8KWAdz60c="
   }
 }
