--- a/TestAuth/appsettings.json
+++ b/TestAuth/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "db": "Host=localhost; Port=5432; Database=updateAuthTest; Username=postgres; Password=password"
+    "db": "Host=localhost; Port=5432; Database=geolens; Username=postgres; Password=password"
   },
   "JWT": {
     "ValidAudience": "audience",
